Converting HTTP to HTTPS

--- a/src/_templates/default.html
+++ b/src/_templates/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <base href="http://e-maxx-eng.github.io/"/>
+    <base href="https://e-maxx-eng.github.io/"/>
     <title>&title& - E-Maxx Algorithms</title>
     <script src="./js/jq.js"></script>
     <script src="./js/common.js"></script>
@@ -9,7 +9,7 @@
         MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
     </script>
     <script type="text/javascript"
-        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     <link rel="stylesheet" href="./css/common.css"/>
 
@@ -31,7 +31,7 @@
     </div>
 &text&
     <div id="footer">
-    (c) 2014 translation by <a href="http://github.com/e-maxx-eng">http://github.com/e-maxx-eng</a>
+    (c) 2014 translation by <a href="https://github.com/e-maxx-eng">https://github.com/e-maxx-eng</a>
     </div>
 </div>
 </body>
