added minified css
corrected code in default.html

--- a/src/_templates/default.html
+++ b/src/_templates/default.html
@@ -11,7 +11,7 @@
     <script type="text/javascript"
         src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
-    <link rel="stylesheet" href="./css/common.css"/>
+    <link rel="stylesheet" href="./css/common.min.css"/>
 
     <!-- highlightjs for code highlighting -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.3/styles/xcode.min.css">
